--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Carlos Castillo",
-            "email": "cmaxhm@yahoo.com"
+            "email": "contact@cmaxhm.com"
         }
     ],
     "autoload": {
